# rocSHMEM

./: AUTHORS  CHANGES  CMakeLists.txt  CONTRIBUTING.md  README.md  failingtests.txt
cmake/: VERSION.sha.in  config.h.in  modfile.crusher.mod  modfile.frontier.mod  modfile.hpcfund.mod  rocm_local_targets.cmake  rocshmem.lua.in  rocshmem_config.h.in
cmake/Modules/: FindIbverbs.cmake
docs/: CMakeLists.txt  Doxyfile.in  host_facing_support.txt
examples/: CMakeLists.txt  rocshmem_allreduce_test.cc  rocshmem_alltoall_test.cc  rocshmem_broadcast_test.cc  rocshmem_getmem_test.cc  rocshmem_put_signal_test.cc
include/roc_shmem/: roc_shmem.hpp
include/rocshmem/: debug.hpp  rocshmem.hpp  rocshmem_AMO.hpp  rocshmem_COLL.hpp  rocshmem_P2P_SYNC.hpp  rocshmem_RMA.hpp  rocshmem_RMA_X.hpp  rocshmem_SIG_OP.hpp  rocshmem_common.hpp
internal/clients/spts/: CMakeLists.txt  GPUHelper.h  HIPHelper.cpp  HIPHelper.h  InputFlags.cpp  InputFlags.h  LICENSE  Main.cpp  MatrixMarketReader.h  OpenCLHelper.cpp  OpenCLHelper.h  SpTS.h  SparseMatrix.h  config.h.in  driver.sh  spts_kernel.h
internal/clients/spts/build_configs/: analyze_single_hip  analyze_single_opencl  analyze_single_rocshmem
internal/scripts/: cscope-index.py
internal/workloads/: Makefile
scripts/: install_dependencies.sh
scripts/build_configs/: dc_multi  dc_multi_debug  dc_multi_ipc  dc_multi_profile  dc_single  ipc_single  ipc_single_cg  ipc_tests_only  rc_multi  rc_multi_debug  rc_multi_wf_coal  rc_single  rc_single_debug  rc_single_managed  rc_single_managed_debug  rc_single_profile  rc_single_single_node  rc_single_single_node_debug  ro_ipc  ro_net  ro_net_debug
scripts/functional_tests/: driver.sh  shmem_allLib_build_and_test.sh
scripts/sos_tests/: driver.sh
scripts/unit_tests/: driver.sh
src/: CMakeLists.txt  assembly.hpp  atomic.hpp  atomic_return.cpp  atomic_return.hpp  backend_bc.cpp  backend_bc.hpp  backend_type.hpp  constants.hpp  context.hpp  context_device.cpp  context_host.cpp  context_incl.hpp  context_tmpl_device.hpp  context_tmpl_host.hpp  device_properties.hpp  device_proxy.hpp  fence_policy.hpp  hdp_policy.hpp  hdp_proxy.hpp  ipc_policy.cpp  ipc_policy.hpp  macros.hpp  mpi_init_singleton.cpp  mpi_init_singleton.hpp  roc_shmem.cpp  roc_shmem_calc.hpp  roc_shmem_gpu.cpp  rocshmem.cpp  rocshmem_calc.hpp  rocshmem_gpu.cpp  stats.hpp  team.cpp  team.hpp  team_tracker.cpp  team_tracker.hpp  templates.hpp  templates_host.hpp  util.cpp  util.hpp  (+2 more)
src/containers/: CMakeLists.txt  array.hpp  array_impl.hpp  forward_list.hpp  forward_list_impl.hpp  free_list.hpp  free_list_impl.hpp  helper_macros.hpp  index_strategy.hpp  matrix.hpp  matrix_impl.hpp  share_strategy.cpp  share_strategy.hpp  strategies.cpp  strategies.hpp
src/gpu_ib/: CMakeLists.txt  backend_ib.cpp  backend_ib.hpp  connect_tests.cpp  connection.cpp  connection.hpp  connection_policy.cpp  connection_policy.hpp  context_ib_device.cpp  context_ib_device.hpp  context_ib_device_coll.cpp  context_ib_host.cpp  context_ib_host.hpp  context_ib_tmpl_device.hpp  context_ib_tmpl_host.hpp  debug.cpp  dynamic_connection.cpp  dynamic_connection.hpp  endian.cpp  endian.hpp  gpu_ib_team.cpp  gpu_ib_team.hpp  infiniband_structs.hpp  memory_builder_policy.hpp  network_policy.cpp  network_policy.hpp  qe_dumper.cpp  qe_dumper.hpp  queue_pair.cpp  queue_pair.hpp  reliable_connection.cpp  reliable_connection.hpp  segment_builder.cpp  segment_builder.hpp  thread_policy.cpp  thread_policy.hpp
src/host/: CMakeLists.txt  host.cpp  host.hpp  host_helpers.hpp  host_templates.hpp
src/ipc/: CMakeLists.txt  backend_ipc.cpp  backend_ipc.hpp  context_ipc.cpp  context_ipc.hpp  context_ipc_device.cpp  context_ipc_device.hpp  context_ipc_device_coll.cpp  context_ipc_host.cpp  context_ipc_host.hpp  context_ipc_tmpl_device.hpp  context_ipc_tmpl_host.hpp  ipc_backend_proxy.hpp  ipc_context_proxy.hpp  ipc_policy.cpp  ipc_policy.hpp  ipc_team.cpp  ipc_team.hpp
src/memory/: CMakeLists.txt  address_record.hpp  bin.hpp  binner.hpp  dev_mono_linear.hpp  heap_memory.hpp  heap_type.hpp  hip_allocator.hpp  memory_allocator.cpp  memory_allocator.hpp  notifier.hpp  pow2_bins.hpp  remote_heap_info.hpp  shmem_allocator_strategy.hpp  single_heap.cpp  single_heap.hpp  slab_heap.cpp  slab_heap.hpp  symmetric_heap.hpp  window_info.hpp
src/reverse_offload/: CMakeLists.txt  backend_proxy.hpp  backend_ro.cpp  backend_ro.hpp  block_handle.hpp  commands_types.hpp  context_proxy.hpp  context_ro_device.cpp  context_ro_device.hpp  context_ro_host.cpp  context_ro_host.hpp  context_ro_tmpl_device.hpp  context_ro_tmpl_host.hpp  mpi_transport.cpp  mpi_transport.hpp  profiler.hpp  queue.cpp  queue.hpp  queue_desc_proxy.hpp  queue_proxy.hpp  ro_net_team.cpp  ro_net_team.hpp  ro_team_proxy.hpp  team_info_proxy.hpp  transport.hpp  window_proxy.hpp
src/sync/: CMakeLists.txt  abql_block_mutex.cpp  abql_block_mutex.hpp  spin_ebo_block_mutex.cpp  spin_ebo_block_mutex.hpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  getmem.cpp  putmem.cpp  putmem_wg.cpp  reduce_wg.cpp  util.h
tests/functional_tests/: CMakeLists.txt  alltoall_tester.cpp  alltoall_tester.hpp  amo_bitwise_tester.cpp  amo_bitwise_tester.hpp  amo_extended_tester.cpp  amo_extended_tester.hpp  amo_standard_tester.cpp  amo_standard_tester.hpp  barrier_all_tester.cpp  barrier_all_tester.hpp  broadcast_tester.cpp  broadcast_tester.hpp  empty_tester.cpp  empty_tester.hpp  extended_primitives.cpp  extended_primitives.hpp  fcollect_tester.cpp  fcollect_tester.hpp  ping_all_tester.cpp  ping_all_tester.hpp  ping_pong_tester.cpp  ping_pong_tester.hpp  primitive_mr_tester.cpp  primitive_mr_tester.hpp  primitive_tester.cpp  primitive_tester.hpp  random_access_tester.cpp  random_access_tester.hpp  reduction_tester.cpp  reduction_tester.hpp  shmem_ptr_tester.cpp  shmem_ptr_tester.hpp  signaling_operations_tester.cpp  signaling_operations_tester.hpp  swarm_tester.cpp  swarm_tester.hpp  sync_tester.cpp  sync_tester.hpp  team_alltoall_tester.cpp  (+18 more)
tests/sos_tests/: CMakeLists.txt  asym_alloc.cpp  atomic_inc.cpp  barrier.cpp  bcast.cpp  bigget.cpp  (+42 more)
(+91 files in other folders)
